# Shatachandra

./: .gitignore  package-lock.json  package.json
backend/: README.md  attackEngine.js  gridConfig.js  package-lock.json  package.json  predictionEngine.js  server.js  simulationEngine.js  utils.js
backend-cpp/: CMakeLists.txt
backend-cpp/include/engine/: defense.h  physics.h
backend-cpp/src/: main.cpp
backend/backend-cpp/include/core/: graph.h  node.h
backend/backend-cpp/include/engine/: physics.h
backend/backend-cpp/include/network/: zmq_pub.h
backend/backend-cpp/src/: main.cpp
backend/bridge-node/: package-lock.json  package.json
backend/bridge-node/src/: aggregator.js  server.js  sim_engine.js  ws_server.js
backend/bridge-node/src/config/: gridConfig.js
backend/bridge-node/src/engine/: attackEngine.js  predictionEngine.js  simulationEngine.js
bridge-node/src/: aggregator.js  zmq_listener.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend-react/: package-lock.json  package.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: CityMap.jsx  CyberEnvironment.jsx  DataLink.jsx  TransmissionTower.jsx
frontend-react/src/store/: useStore.js
frontend/src/: App.jsx  index.css
frontend/src/components/graph/: NetworkGraph.jsx
frontend/src/components/scada/: AttackDetailsPanel.jsx  CommunicationPanel.jsx  (+7 more)
frontend/src/constants/: gridLayout.js  theme.js
frontend/src/hooks/: useDraggable.js  useSpeech.js
frontend/src/socket/: socketClient.js
frontend/src/store/: useGridStore.js
(+15 files in other folders)
